Fix to front page grid so cards doesnt overflow

--- a/app/home.module.css
+++ b/app/home.module.css
@@ -25,13 +25,13 @@
     }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
     .grid {
         grid-template-columns: repeat(3, 1fr);
     }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1240px) {
     .grid {
         grid-template-columns: repeat(4, 1fr);
     }
